--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.6.1
 MySQL-python==1.2.5
+South==0.8.4
 Werkzeug==0.9.4
 argparse==1.2.1
 django-extensions==1.3.3
+psycopg2==2.5.2
 pytz==2013.9
 six==1.5.2
 wsgiref==0.1.2
