--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,20 @@
 Django==1.6.1
+Fabric==1.8.2
 MySQL-python==1.2.5
+PIL==1.1.7
 South==0.8.4
 Werkzeug==0.9.4
 argparse==1.2.1
+beautifulsoup4==4.3.2
+boto==2.25.0
 django-extensions==1.3.3
+django-storages==1.1.8
+ecdsa==0.10
+lxml==3.3.1
+paramiko==1.12.2
 psycopg2==2.5.2
+pycrypto==2.6.1
 pytz==2013.9
+requests==2.2.1
 six==1.5.2
 wsgiref==0.1.2
