--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ boto==2.25.0
 django-extensions==1.3.3
 django-storages==1.1.8
 ecdsa==0.10
+gondor==1.2.5
+gunicorn==18.0
 lxml==3.3.1
 paramiko==1.12.2
 psycopg2==2.5.2
