--- a/gondor.yml
+++ b/gondor.yml
@@ -14,8 +14,9 @@ requirements_file: requirements.txt
 
 # Commands to be executed during deployment. These can handle migrations or
 # moving static files into place. Accepts same parameters as gondor run.
-# on_deploy:
-#     - manage.py syncdb --noinput
+on_deploy:
+    - manage.py syncdb --noinput
+    - manage.py migrate
 #     - manage.py collectstatic --noinput
 
 # URLs which should be served by Gondor mapping to a filesystem location
