--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,12 @@ ecdsa==0.10
 gondor==1.2.5
 gunicorn==18.0
 lxml==3.3.1
+oauthlib==0.6.1
 paramiko==1.12.2
 psycopg2==2.5.2
 pycrypto==2.6.1
 pytz==2013.9
 requests==2.2.1
+requests-oauthlib==0.4.0
 six==1.5.2
 wsgiref==0.1.2
