Removed site key

--- a/gondor.yml
+++ b/gondor.yml
@@ -1,5 +1,5 @@
 # The key associated to your site.
-key: T0BZY81XDGC
+key: GETTING_FROM_ENV
 
 # Version control system used locally for your project.
 vcs: git
